Bug 246130 - hidden stateChanged() method
Summary: hidden stateChanged() method
Status: RESOLVED FIXED
Alias: None
Product: kdelibs
Classification: Unmaintained
Component: kdecore (other bugs)
Version First Reported In: SVN
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: kdelibs bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-29 09:54 UTC by Unknown
Modified: 2010-07-29 21:59 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Unknown 2010-07-29 09:54:43 UTC
Version:           SVN (using Devel) 
OS:                Linux

Compiling any class inherited from KMediaPlayer::Player, gcc reports this warning:

/usr/include/kxmlguiclient.h:326: warning: ‘virtual void 
KXMLGUIClient::stateChanged(const QString&, 
KXMLGUIClient::ReverseStateChange)’ was hidden
/usr/include/KDE/KMediaPlayer/../../kmediaplayer/player.h:131: warning:   
by ‘void KMediaPlayer::Player::stateChanged(int)’

KParts::Part inherits from XMLGUIClient the stateChanged(const QString&,...) 
method, and KMediaPlayer::Player::stateChanged(int) is a signal.

The problem is that hiding the method stateChanged(QString&) prevents the KPart to be able to use XMLGUI states.



Reproducible: Always

Steps to Reproduce:
compile any class derived from KMediaPlayer::Player.




Olivier Goffart provided a solution in k-c-d:

The 'workaround' is to explicitly hide or enable it back with the 'using' 
keyword

put 
using KXMLGUIClient::stateChanged;
in the protected section of the KMediaPlayer::Player class

this does not break BC
Comment 1 Unknown 2010-07-29 21:59:14 UTC
SVN commit 1156842 by pedrol:

Enable the stateChanged(QString&, ...) method that was hidden by 	   the stateChanged(int) signal

BUG: 246130


 M  +5 -0      player.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1156842