Enable the stateChanged(QString&, ...) method that was hidden by 	   the stateChanged(int) signal

BUG: 246130

svn path=/trunk/KDE/kdelibs/; revision=1156842